--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
    "license": "ISC",
    "type": "module",
    "dependencies": {
+      "@prisma/client": "^4.16.1",
       "bcrypt": "^5.1.0",
       "express": "^4.18.2",
       "joi": "^17.9.2",
